--- a/doc/trunk/design/syn/S04.pod
+++ b/doc/trunk/design/syn/S04.pod
@@ -1083,7 +1083,7 @@ is interpreted as a hash subscript.
     if $term{$x}        # subscript because postfix expected
     if $term {$x}       # expression followed by statement block
     if $term.{$x}       # valid subscript with dot
-    if $term\ .{$x}     # valid subscript with "long dot"
+    if $term\ .{$x}     # valid subscript with "unspace"
 
 Similar rules apply to array subscripts:
 
@@ -1091,7 +1091,7 @@ Similar rules apply to array subscripts:
     if $term[$x]        # subscript because postfix expected
     if $term [$x]       # syntax error (two terms in a row)
     if $term.[$x]       # valid subscript with dot
-    if $term\ .[$x]     # valid subscript with "long dot"
+    if $term\ .[$x]     # valid subscript with "unspace"
 
 And to the parentheses delimiting function arguments:
 
@@ -1099,7 +1099,7 @@ And to the parentheses delimiting function arguments:
     if $term($x)        # function call because operator expected
     if $term ($x)       # syntax error (two terms in a row)
     if $term.($x)       # valid function call with dot
-    if $term\ .($x)     # valid function call with "long dot"
+    if $term\ .($x)     # valid function call with "unspace"
 
 Outside of any kind of expression brackets, a final closing curly
 on a line (not counting whitespace or comments) always reverts
